[gd_scene load_steps=11 format=3 uid="uid://one3l2j3vodd"]

[ext_resource type="Script" path="res://Entities/ContainerStackingTest.gd" id="1_f2v7x"]
[ext_resource type="PackedScene" uid="uid://c5vova3vmv6p7" path="res://Entities/Environment/crane.tscn" id="2_30gk4"]
[ext_resource type="Shader" path="res://CRTMonitor.gdshader" id="2_o08nb"]
[ext_resource type="Script" path="res://Levels/DropPoints.gd" id="3_i3vix"]
[ext_resource type="PackedScene" uid="uid://di3cuwne2hwff" path="res://Menus/scene_launch_button.tscn" id="3_tcnfn"]
[ext_resource type="PackedScene" uid="uid://dagki3jiubn80" path="res://art/background/parallax_background.tscn" id="4_unqhl"]
[ext_resource type="PackedScene" uid="uid://dpa685co3h1vf" path="res://Menus/quit_button_return_to_menu.tscn" id="6_n282g"]
[ext_resource type="PackedScene" uid="uid://cmx61qarjfirk" path="res://UI/info_popup.tscn" id="8_18gwl"]
[ext_resource type="Texture2D" uid="uid://c6hhruk5y7uvl" path="res://art/low_res_containers/shipping_container_generic-LOWRES.png" id="9_xttiv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f6bsu"]
shader = ExtResource("2_o08nb")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.195
shader_parameter/grille_opacity = 0.3
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = false
shader_parameter/roll = true
shader_parameter/roll_speed = 2.0
shader_parameter/roll_size = 25.101
shader_parameter/roll_variation = 2.493
shader_parameter/distort_intensity = 0.012
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 4.75e-08
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.192
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[node name="ContainerStackingTest" type="Node2D"]
position = Vector2(1, 1)
script = ExtResource("1_f2v7x")
target_weight = 300

[node name="HUD" type="CanvasLayer" parent="."]
layer = 100

[node name="HBoxContainer" type="HBoxContainer" parent="HUD"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 2

[node name="QuitButton-ReturnToMenu" parent="HUD/HBoxContainer" instance=ExtResource("6_n282g")]
layout_mode = 2

[node name="FightButton" parent="HUD/HBoxContainer" instance=ExtResource("3_tcnfn")]
layout_mode = 2
text = "Fight!"
scene_path = "res://Levels/GeneratedPlayspace.tscn"

[node name="ParallaxBackground" parent="." instance=ExtResource("4_unqhl")]

[node name="DropPoints" type="Node2D" parent="."]
position = Vector2(-17, -113)
script = ExtResource("3_i3vix")
exit_coord = Vector2(1, 3)
entrance_direction = 3
exit_direction = 1
n_horizontal = 2
n_vertical = 4
container_width = 48
container_height = 24

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -177)

[node name="ProgressBar" type="ProgressBar" parent="."]
z_index = 1
offset_left = -113.0
offset_top = -97.0
offset_right = -5.99999
offset_bottom = -86.0
rotation = -1.5708
max_value = 1.0
show_percentage = false

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_f6bsu")
offset_left = -698.0
offset_top = -613.0
offset_right = 686.0
offset_bottom = 298.0
color = Color(1, 1, 1, 0)

[node name="crane" parent="." node_paths=PackedStringArray("drop_zone") instance=ExtResource("2_30gk4")]
position = Vector2(-17, -225)
n_columns = 2
drop_zone = NodePath("../DropPoints")

[node name="Instructions" type="Node2D" parent="."]
position = Vector2(0, -177)

[node name="placement" parent="Instructions" node_paths=PackedStringArray("next_slide") instance=ExtResource("8_18gwl")]
visible = false
position = Vector2(-9, -1)
next_slide = NodePath("../weight")
info_text = "Place containers 
to create a contiguous path 
from Start (A) to Finish (B)
(Arrow keys or WASD to move, space to drop.)"

[node name="weight" parent="Instructions" instance=ExtResource("8_18gwl")]
visible = false
position = Vector2(-9, -1)
info_text = "The weight of each shipping
container reflects 
the amount and difficulty of
teamsters, thugs, and assassins
contained within."

[node name="Arena" type="Node2D" parent="."]

[node name="Sprite2D11" type="Sprite2D" parent="Arena"]
position = Vector2(-65, -113)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_xttiv")

[node name="Sprite2D2" type="Sprite2D" parent="Arena"]
position = Vector2(-17, -89)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_xttiv")

[node name="Sprite2D" type="Sprite2D" parent="Arena"]
position = Vector2(-65, -89)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_xttiv")

[node name="Sprite2D4" type="Sprite2D" parent="Arena"]
position = Vector2(31, -89)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_xttiv")

[node name="Sprite2D5" type="Sprite2D" parent="Arena"]
position = Vector2(79, -89)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_xttiv")

[node name="Sprite2D7" type="Sprite2D" parent="Arena"]
position = Vector2(79, -113)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_xttiv")

[node name="Sprite2D8" type="Sprite2D" parent="Arena"]
position = Vector2(79, -137)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_xttiv")

[node name="Sprite2D9" type="Sprite2D" parent="Arena"]
position = Vector2(79, -161)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_xttiv")

[node name="Sprite2D10" type="Sprite2D" parent="Arena"]
position = Vector2(79, -185)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_xttiv")

[connection signal="drop_over" from="DropPoints" to="crane" method="refesh_container"]
[connection signal="weight_added" from="DropPoints" to="." method="add_weight"]
